fix: improve legibility of titles

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -130,6 +130,7 @@ ul {
     font-weight: 400;
     font-size: 4.5rem;
     color: #fff;
+    text-shadow: 1px 1px 8px rgba(34, 34, 34, 0.25);
     text-transform: uppercase;
     display: block;
     margin-bottom: -1rem;
@@ -165,6 +166,7 @@ ul {
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
   text-align: center;
+  text-shadow: 1px 1px 8px rgba(34, 34, 34, 0.25);
 }
 
 %section {
